--- a/index.html
+++ b/index.html
@@ -2,24 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>hello world</title>
+  <title>koa test</title>
+  <script src="//cdn.bootcss.com/jquery/3.0.0-beta1/jquery.js"></script>
 </head>
 <body>
-  <h1>This is not exciting</h1>
-  <form method="POST" action="">
-    <label>New file name</label>
-    <input name="filename" type="text">
-    <label>Msg</label>
-    <input name="msg" type="text">
-    <button type="submit">Do it.</button>
-  </form>
-  <ul>
-    {{#files}}
-      <li>
-        <a href={{.}}>{{.}}</a>
-      </li>
-    {{/files}}
-  </ul>
-  <h3>Don't think I haven't noticed you've been here {{views}} times</h3>
+<h1>test</h1>
+
+<script>
+  $(function() {
+      $.ajax({
+        url: '/v1/test',
+        type: 'get',
+        success: function() {
+          debugger;
+        }
+      })
+  })
+</script>
 </body>
 </html>
